Working on SkiaShaderOps tests